--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -62,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <h2>Mini Tests </h2>
                                 <button onclick="toggleContent2()">Mini Test 1</button>
                                 <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="7048" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <iframe class="responsive" src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="7048" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </div>
                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div id="content16" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?v=psokumt6520" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                     </div>
-                                <br>
+
                             <button onclick="toggleContent17()">Géneros</button>
                                     <div id="content17" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>
@@ -148,7 +148,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div id="content27" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                     <iframe src="https://learningapps.org/watch?app=13685765" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
-                                                <br>
                              <button onclick="toggleContent28()">Gerundio 1</button>
                                                 <div id="content28" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                     <iframe src="https://learningapps.org/watch?app=10788281" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
@@ -161,7 +160,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div id="content30" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                     <iframe src="https://learningapps.org/watch?app=12029946" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
-                                                <br>
                             <button onclick="toggleContent31()">Pretérito Indefinido (1)</button>
                                                 <div id="content31" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                     <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
@@ -188,7 +186,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div><footer class="img-me">
 <p><a href="#"><span style="color: rgb(255, 255, 255);">Link1</span></a> <span style="color: #FFFFFF;">|</span> <a href="#"><span style="color: rgb(255, 255, 255);">Link2</span></a> <span style="color: #FFFFFF;">|</span> <a href="#"><span style="color: rgb(255, 255, 255);">Link3</span></a></p>
-<p><br></p>
+<p></p>
 </footer>
 
     </div>
