--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -134,7 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                              <button onclick="toggleContent20()">Números</button>
                                             <div id="content20" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://www.education.vic.gov.au/languagesonline/spanish/topic07/no_03/spanish_07_03.htm" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>
+                                                <iframe src="https://learningapps.org/watch?v=pj9sijmzt21" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div>
                             <button onclick="toggleContent21()">Ser o Estar</button>
                                             <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
