--- a/cursos/spanish/b1.html
+++ b/cursos/spanish/b1.html
@@ -83,6 +83,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                        <div id="content53" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                             <iframe src="https://learningapps.org/watch?v=p15xcysdn21" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div><br>
+                          <button onclick="toggleContent54()">Contraste de pasados</button>
+                                      <div id="content54" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                            <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                           </div><br>
 
 
 
