--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -62,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <h2>Mini Tests </h2>
                                 <button onclick="toggleContent2()">Mini Test 1</button>
                                 <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                    <iframe class="responsive" src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="7048" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="7048" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </div>
                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
