--- a/cursos/spanish/b1.html
+++ b/cursos/spanish/b1.html
@@ -118,7 +118,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
 
                             <h2>Tests</h2>
-                            <p><button onclick="toggleContent34()">Test Final</button>
+                            <p><button onclick="toggleContent55()">Mini-Test B1.1</button>
+                                    <div id="content55" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" width="640" height="6941" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            </div>
+
+                            <p><button onclick="toggleContent34()">Test Final B1.2</button>
                                     <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" width="640" height="3313" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
