--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -62,26 +62,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <h2>Mini Tests </h2>
                                 <button onclick="toggleContent2()">Mini Test 1</button>
                                 <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="7048" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </div>
                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
 
                                 <button onclick="toggleContent7()">Mini Test 2</button>
                                 <div id="content7" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfffJNgNchQHoXbSF07L9bT4c10m2u-N9rKBgBeWRRXO-y-A/viewform?embedded=true" width="640" height="4228" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfffJNgNchQHoXbSF07L9bT4c10m2u-N9rKBgBeWRRXO-y-A/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </div>
 
                                 <button onclick="toggleContent8()">Mini Test 3</button>
                                 <div id="content8" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" width="640" height="15342" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                 </div>
 
                             <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
                             <button onclick="toggleContent9()">Test Final</button>
                         <div id="content9" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" width="640" height="1712" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                             </div>
                                 <h2>Práctica </h2>
                         <button onclick="toggleContent10()">Países 1</button>
@@ -134,47 +134,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                              <button onclick="toggleContent20()">Números</button>
                                             <div id="content20" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                <iframe src="https://learningapps.org/watch?v=pj9sijmzt21" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                <iframe src="https://learningapps.org/watch?v=pj9sijmzt21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div>
                             <button onclick="toggleContent21()">Ser o Estar</button>
                                             <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div>
                             <button onclick="toggleContent26()">Ser/Estar/Hay (1)</button>
                                             <div id="content26" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                <iframe src="https://learningapps.org/watch?app=11004677" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                <iframe src="https://learningapps.org/watch?app=11004677" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div>
                             <button onclick="toggleContent27()">Ser/Estar/Hay (2)</button>
                                                 <div id="content27" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=13685765" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=13685765" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                              <button onclick="toggleContent28()">Gerundio 1</button>
                                                 <div id="content28" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=10788281" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=10788281" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                             <button onclick="toggleContent29()">Infinitivo/Gerundio/Participio</button>
                                                 <div id="content29" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=14896165" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=14896165" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                             <button onclick="toggleContent30()">¿Gerundio o Participio?</button>
                                                 <div id="content30" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=12029946" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=12029946" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                             <button onclick="toggleContent31()">Pretérito Indefinido (1)</button>
                                                 <div id="content31" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                             <button onclick="toggleContent32()">Pretérito Indefinido (2)</button>
                                                 <div id="content32" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=15939973" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=15939973" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                              <button onclick="toggleContent33()">Pretérito Indefinido (3)</button>
                                                 <div id="content33" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                    <iframe src="https://learningapps.org/watch?app=13060010" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                    <iframe src="https://learningapps.org/watch?app=13060010" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
                               <button onclick="toggleContent47()">Quizlet colores</button>
                                                  <div id="content47" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                   <iframe src="https://quizlet.com/581406313/match/embed?i=2nc5sb&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+                                                   <iframe src="https://quizlet.com/581406313/match/embed?i=2nc5sb&x=1jj1" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                  </div>
 
                                                 <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
