--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -128,6 +128,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div id="content50" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe src="https://learningapps.org/watch?app=19682541" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                                 </div>
+                    <button onclick="toggleContent56()">Verbos en PPS</button>
+                                               <div id="content56" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                               <iframe src="https://learningapps.org/watch?v=pq432cnrc22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                               </div>
+
 
 
 
