--- a/cursos/spanish/b1.html
+++ b/cursos/spanish/b1.html
@@ -63,32 +63,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <button onclick="toggleContent22()">Ejercicios 1: ¿Imperfecto o Indefinido?</button>
                             <div id="content22" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                 <iframe src="https://learningapps.org/watch?app=9373009" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                            </div><br>
+                            </div>
                             <button onclick="toggleContent23()">Ejercicios 2: ¿Imperfecto o Indefinido?</button>
                                 <div id="content23" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                     <iframe src="https://learningapps.org/watch?app=4824509" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                             </div><br>
+                             </div>
 
                             <button onclick="toggleContent24()">Ejercicios 3: ¿Imperfecto o Indefinido?</button>
                                     <div id="content24" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?app=5503853" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                    </div><br>
+                                    </div>
 
                             <button onclick="toggleContent25()">Ejercicios 4: ¿Perfecto o Indefinido?</button>
                                         <div id="content25" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                             <iframe src="https://learningapps.org/watch?app=9373630" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                             </div><br>
+                                             </div>
 
                            <button onclick="toggleContent53()">Pretérito Indefinido Verbos irregulares</button>
                                        <div id="content53" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                             <iframe src="https://learningapps.org/watch?v=p15xcysdn21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                            </div><br>
+                                            </div>
                           <button onclick="toggleContent54()">Contraste de pasados</button>
                                       <div id="content54" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                             <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                           </div><br>
-
-
+                                           </div>
+                         <button onclick="toggleContent57()">Subjuntivo 1</button>
+                                     <div id="content57" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                           <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                          </div><br>
 
                             <h2>Subjuntivo</h2>
                                 <button onclick="toggleContent2()">Ejercicios 1: Presente (Subjuntivo)</button>
