--- a/cursos/spanish/b1.html
+++ b/cursos/spanish/b1.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                            </div>
                          <button onclick="toggleContent57()">Subjuntivo 1</button>
                                      <div id="content57" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                           <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                            <iframe src="https://learningapps.org/watch?app=26338883" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                           </div><br>
 
                             <h2>Subjuntivo</h2>
