--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -91,6 +91,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                      <div id="content38" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://www.flippity.net/sw.asp?k=1B-6UCeVAbTR79FwsrZ91PoIRhK_UUVVrf5kJz1ADHKs" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                     </div>
+                      <button onclick="toggleContent58()">Conjugación Verbos Regulares (Presente)</button>
+                                   <div id="content58" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                        <iframe src="https://learningapps.org/watch?v=p2mqupsej22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+
+                                  </div>
                         <button onclick="toggleContent39()">Conjugación Verbos irreg. (1)</button>
                                     <div id="content39" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?v=pr0vma21j21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
