--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -136,6 +136,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <div id="content20" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe src="https://learningapps.org/watch?v=pj9sijmzt21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div>
+                          <button onclick="toggleContent58()">Conjugación Verbos Regulares (Presente)</button>
+                                       <div id="content58" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                            <iframe src="https://learningapps.org/watch?v=p2mqupsej22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+
+                                      </div>
+
                             <button onclick="toggleContent21()">Ser o Estar</button>
                                             <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
