--- a/courses/english.html
+++ b/courses/english.html
@@ -15,7 +15,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Home</a></li>
-                    <li class="elmenu"><a href="https://ogrod-salwator.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="galleries.html" class="dropbtn elmenu">Courses</a>
                       <div class="dropdown-content elmenu">
