--- a/courses/courses.html
+++ b/courses/courses.html
@@ -17,7 +17,7 @@
                       <li class="elmenu"><a href="index.html">Home</a></li>
                       <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                       <li class="dropdown elmenu">
-                        <a href="galleries.html" class="dropbtn elmenu">Courses</a>
+                        <a href="courses.html" class="dropbtn elmenu">Courses</a>
                         <div class="dropdown-content elmenu">
                           <a href="spanish.html" class="elmenu">Spanish</a>
                           <a href="japanese.html" class="elmenu">Japanese</a>
@@ -33,12 +33,8 @@
             <div id="main-content">
           <h1>Courses</h1>
           <div class="responsive">
-            <ul>
-              <li><a href="gallery2021.html">Gallery2021</a></li>
-              <li><a href="gallery2020.html">Gallery2020</a></li>
-              <li><a href="gallery2019.html">Gallery2019</a></li>
-              <li><a href="gallery2018.html">Gallery2018</a></li>
-            </ul>
+            <h2>Courses</h2>
+            <p>This page is dedicated to provide information and materials for a variety of courses that I teach. In case of any question, just contact me. Regards,<br>Rodrigo</p>
         </div>
 
       </div>
