--- a/courses/spanish-c2.html
+++ b/courses/spanish-c2.html
@@ -18,7 +18,7 @@
                     <li class="elmenu"><a href="index.html">Home</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
-                      <a href="galleries.html" class="dropbtn elmenu">Courses</a>
+                      <a href="courses.html" class="dropbtn elmenu">Courses</a>
                       <div class="dropdown-content elmenu">
                         <a href="spanish.html" class="elmenu">Spanish</a>
                         <a href="japanese.html" class="elmenu">Japanese</a>
