--- a/courses/courses.html
+++ b/courses/courses.html
@@ -35,6 +35,13 @@
           <div class="responsive">
             <h2>Courses</h2>
             <p>This page is dedicated to provide information and materials for a variety of courses that I teach. In case of any question, just contact me. Regards,<br>Rodrigo</p>
+
+            <ul>
+              <li><a href="spanish.html">Spanish</a></li>
+              <li><a href="japanese.html">Japanese</a></li>
+              <li><a href="english.html">English</a></li>
+              <li><a href="piano.html">Piano</a></li>
+            </ul>
         </div>
 
       </div>
