--- a/courses/b2-upperintermediate.html
+++ b/courses/b2-upperintermediate.html
@@ -31,7 +31,7 @@
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <h1>Sign-up for a course</h1>
+            <p><h1>Sign-up for a course</h1></p>
             <div "course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                     <option>English</option>
@@ -42,7 +42,7 @@
                     </select>
             		   <select id="output" onchange="levelModality()">
                      <option>B2(upper-intermediate)</option>
-                     <option>C1(advanced2)</option>
+                     <option>C1(advanced)</option>
                      <option>C2(very advanced)</option>
                      <option>A1(introductory)</option>
                      <option>A2(basic)</option>
@@ -50,12 +50,12 @@
                      <option>select level</option>
                </select>
                  <select id="output2" onchange="courseRedirect()">
-                   <option>Stationary</option>
                    <option>Online</option>
+                   <option>Stationary</option>
                    <option>select modality</option>
                </select>
                  </div>
-             <h1>English B2(upper-intermediate) Online</h1>
+             <p><h1>English B2(upper-intermediate) Online</h1></p>
               </div>
             </article>
           </div>
