--- a/courses/courses.html
+++ b/courses/courses.html
@@ -31,7 +31,7 @@
 
                 <article class="img-info">
             <div id="main-content">
-          <h1>Courses</h1>
+          <p><h1>Courses</h1></p>
           <div class="responsive">
             <p>This page is dedicated to provide information and materials for a variety of courses that I teach. In case of any question, just contact me. Regards,<br>Rodrigo</p>
 
