--- a/courses/japanese.html
+++ b/courses/japanese.html
@@ -30,7 +30,7 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <h1>Japanese</h1>
+          <p><h1>Japanese</h1></p>
       <div class="responsive">
 </div>
         </article>
