--- a/courses/signup.html
+++ b/courses/signup.html
@@ -31,8 +31,8 @@
                 </ul>
                 <article class="img-info">
                   <div id="main-content">
-                  <h1>Sign-up for a course</h1>
-            <div "course-selection" style="display: inline;">
+                  <p><h1>Sign-up for a course</h1></p>
+            <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                         <option>select course</option>
                         <option>Spanish</option>
@@ -40,15 +40,15 @@
                         <option>English</option>
                         <option>Piano</option>
                     </select>
-            		   <select id="output" onchange="levelModality()">
-                     <option>select modality</option>
+            		  <select id="output" onchange="levelModality()">
+                     <option>select level</option>
             		</select>
                 <select id="output2" onchange="courseRedirect()">
-                  <option>select level</option>
+                  <option>select modality</option>
              </select>
             </div>
 
-            <h1>hola</h1>
+            <p>Choose a course, a level and a modality from the dropdown menus above. </p>
 </div>
         </article>
             </div>
