--- a/courses/spanish-a1.html
+++ b/courses/spanish-a1.html
@@ -31,7 +31,7 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <h1>Spanish</h1>
+          <p><h1>Spanish</h1></p>
 
 
 
