--- a/courses/a2-n52.html
+++ b/courses/a2-n52.html
@@ -31,7 +31,7 @@
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <h1>Sign-up for a course</h1>
+            <p><h1>Sign-up for a course</h1></p>
             <div "course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
               <option>Japanese</option>
@@ -55,7 +55,7 @@
                     <option>select modality</option>
                 </select>
                   </div>
-              <h1>Japanese A2(N5) Stationary</h1>
+              <p><h1>Japanese A2(N5) Stationary</h1></p>
               </div>
             </article>
           </div>
