--- a/courses/b2-intermedioalto.html
+++ b/courses/b2-intermedioalto.html
@@ -31,22 +31,22 @@
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <h1>Sign-up for a course</h1>
+            <p><h1>Sign-up for a course</h1></p>
             <div "course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
-                    <option>English</option>
                     <option>Spanish</option>
+                    <option>English</option>
                     <option>Japanese</option>
                     <option>Piano</option>
-                      <option>select course</option>
+                      <option id="rojo"</option>>select course</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>B2(upper-intermediate)</option>
-                     <option>C1(advanced2)</option>
-                     <option>C2(very advanced)</option>
-                     <option>A1(introductory)</option>
-                     <option>A2(basic)</option>
-                     <option>B1(intermediate)</option>
+                     <option>B2(intermedio alto)</option>
+                     <option>C1(avanzado)</option>
+                     <option>C2(muy avanzado)</option>
+                     <option>A1(iniciación)</option>
+                     <option>A2(básico)</option>
+                     <option>B1(intermedio)</option>
                      <option>select level</option>
             		</select>
             			<select id="output2" onchange="courseRedirect()">
@@ -55,7 +55,7 @@
                     <option>select modality</option>
                 </select>
                   </div>
-              <h1>English B2(upper intermediate) Online</h1>
+              <p><h1>Español B2(intermedio alto) Online</h1></p>
               </div>
             </article>
           </div>
