--- a/courses/calendar.html
+++ b/courses/calendar.html
@@ -30,7 +30,7 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <h1>Calendar</h1>
+          <p><h1>Calendar</h1></p>
           <div class="responsive">
             <iframe src="https://calendar.google.com/calendar/embed?src=9e7cf9215b8f9382451a005097a05ab085e0b88ed463133a4ef5c746823a04ae%40group.calendar.google.com&ctz=Europe%2FWarsaw" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
