--- a/courses/intermediate2.html
+++ b/courses/intermediate2.html
@@ -31,7 +31,7 @@
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <h1>Sign-up for a course</h1>
+            <p><h1>Sign-up for a course</h1></p>
             <div "course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                     <option>Piano</option>
@@ -51,7 +51,7 @@
                     <option>select modality</option>
                 </select>
                   </div>
-              <h1>Piano Intermediate Stationary</h1>
+              <p><h1>Piano Intermediate Stationary</h1></p>
               </div>
             </article>
           </div>
