--- a/courses/a1-iniciacion.html
+++ b/courses/a1-iniciacion.html
@@ -87,10 +87,11 @@
             <tr>
               <td>Three options 👆 (Select on the form that will be displayed after clicking "ORDER"👉)</td>
               <td>02.01.2022 - 02.03.2023</td>
-              <td><ul id="price" style="position:relative;margin:4px 4px;"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
-                <td><button onclick="toggleContent59()" style="background-color:red; color:white; position:absolute; margin:-16px 12px; padding:7px 8px">ORDER</button></td>
+              <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
+                <td><button id="order" onclick="toggleContent59()">ORDER</button></td>
             </tr>
         </table>
+
 <div class="responsive">
         <div id="form-spaA1o" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVMrzywKKr7KzUhkEPCxrI1DTEtWJxIjSwHnYCef24ptvVVA/viewform?embedded=true" width="640" height="1070" frameborder="0" marginheight="0" marginwidth="0">Ładuje…</iframe>
