--- a/courses/spanish-a2.html
+++ b/courses/spanish-a2.html
@@ -61,19 +61,19 @@
             <h2>Mini Tests</h2>
       <button onclick="toggleContent42()">Mini-Test 1</button>
                  <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4V5zSrL-5PFowppJCUBUM8HzjcjAALBZ1foAiimlbcQHiGw/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4V5zSrL-5PFowppJCUBUM8HzjcjAALBZ1foAiimlbcQHiGw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
                  </div><br>
      <button onclick="toggleContent46()">Mini-Test 2</button>
                 <div id="content46" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKH0K_7hmemylLUUo4l5ybAadIx-0-tHLSrrVDtW7U4xWqdw/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKH0K_7hmemylLUUo4l5ybAadIx-0-tHLSrrVDtW7U4xWqdw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
                 </div><br>
     <button onclick="toggleContent51()">Mini-Test 3</button>
                <div id="content51" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpFVhUuUH6Xak2xcXn4QM8WpLT_HGbdPqrGHB6xSYrZ530kw/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpFVhUuUH6Xak2xcXn4QM8WpLT_HGbdPqrGHB6xSYrZ530kw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
                </div><br>
    <button onclick="toggleContent52()">Test Final</button>
               <div id="content52" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT178CMb2ynSmMt85vPByFjBslG9m98Iq9PRLtNr4vD3BuKg/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT178CMb2ynSmMt85vPByFjBslG9m98Iq9PRLtNr4vD3BuKg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
               </div>
       <h2>Práctica</h2>
       <button onclick="toggleContent35()">Profesiones I</button>
