--- a/courses/b2-intermedioalto.html
+++ b/courses/b2-intermedioalto.html
@@ -32,13 +32,13 @@
           <article class="img-info">
           <div id="main-content">
             <p><h1>Sign-up for a course</h1></p>
-            <div "course-selection" style="display: inline;">
+            <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
-                    <option>Spanish</option>
-                    <option>English</option>
-                    <option>Japanese</option>
-                    <option>Piano</option>
-                      <option id="rojo"</option>>select course</option>
+                      <option>Spanish</option>
+                      <option>Japanese</option>
+                      <option>English</option>
+                      <option>Piano</option>
+                      <option>select course</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
                      <option>B2(intermedio alto)</option>
@@ -47,7 +47,7 @@
                      <option>A1(iniciación)</option>
                      <option>A2(básico)</option>
                      <option>B1(intermedio)</option>
-                     <option>select level</option>
+                   <option>select level</option>
             		</select>
             			<select id="output2" onchange="courseRedirect()">
                     <option>Online</option>
@@ -56,6 +56,49 @@
                 </select>
                   </div>
               <p><h1>Español B2(intermedio alto) Online</h1></p>
+              <p>In B1 you consolidate your knowledge about the different past tenses and learn about a new and complex grammar topic: el subjuntivo. Your richer vocabulary and your ability with grammar help you start producing simple connected texts on topics that are familiar or of personal interest. You can also describe experiences and events, dreams, hopes and ambitions and briefly give reasons and explanations for opinions and plans. After B1 you already have a large understanding about the Spanish language. Even though you might still not speak in a highly sophisticated way you have already a very good level to start functioning in Spanish, also in a professional level.
+                <button onclick="toggleContent72()" style="background-color:blue;color:white;">Read More</button>
+                <div id="content72" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+                  <p>
+                  The methodology of the course is based on fun activities carefully chosen by the teacher around the class topic covering all the areas of the language acquisition, namely: listening, speaking, reading and writing. Every class starts with a short conversation, a quick check of the previous homework, and a short presentation of the class topic/unit through an explanation by me complemented by drawings using a tablet, and sometimes audiovisual examples too. Soon after, the students are assigned group or individual activities to perform during class. Then we briefly check the results and clarify student’s questions, and repeat the activity-check methodology till the end of the class, when homework is assigned. The homework consists of 2 components: a quizlet vocabulary that is check by riddles in the following class and an open homework that could be either exercises from the book or a composition following a reading or an audiovisual material.
+                  <p>
+                  Apart from the class textbook -which will be sent to the student some days before the class-, we use Google Classroom, Google Docs, Quizlet and, of course, this website (with exercises and tests) as the main platforms of work, but also other ones such as Flippity and LearningApps. The class is taught via zoom and the recurring link is sent some days before the first lesson.
+                  </p>
+                  Length of the course: 45 academic hrs / 1.5 hrs each time / Twice a week
+                  <br>
+                  Price: 80zl/1hr. (up to 4 people), 60zl/1hr (up to 8 people). Individual lessons: 120zl/1hr.
+                  <br>Platform: Zoom (link will be sent before the first lesson)
+                  Schedule: 3 options (the first one to reach 2 people will be the definite one):
+                  <ul>
+                    <li>Option 1) Wednesdays 12:15-13:45 and Fridays 11:30-13:00</li>
+                    <li>Option 2) Thursdays 8:45-10:15 and Saturdays 10:00-11:30</li>
+                    <li>Option 3) Fridays and Sundays 10:00-11:30</li>
+                  </ul>
+                  </p>
+<div class="responsive">
+          <table>
+            <tr>
+              <th>Class days</th>
+              <th>Start and End date</th>
+              <th>Course price</th>
+              <th>Reservation</th>
+            </tr>
+            <tr>
+              <td>Three options 👆 (Select on the form that will be displayed after clicking "ORDER"👉)</td>
+              <td>02.01.2022 - 14.04.2023</td>
+              <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
+                <td><button id="order" onclick="toggleContent71()">ORDER</button></td>
+            </tr>
+        </table>
+
+<div class="responsive">
+        <div id="form-spaB2o" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGqEGUnMXxJ18YaQF1513oOu21O6W8gGPCG7idzhbM9iULUA/viewform?embedded=true" width="640" height="1034" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
+        </div>
+        </div>
+</div>
+              </div>
               </div>
             </article>
           </div>
