--- a/courses/c1-avanzado2.html
+++ b/courses/c1-avanzado2.html
@@ -32,7 +32,7 @@
           <article class="img-info">
           <div id="main-content">
             <p><h1>Sign-up for a course</h1></p>
-            <div "course-selection" style="display: inline;">
+            <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                       <option>Spanish</option>
                       <option>Japanese</option>
@@ -55,7 +55,53 @@
                     <option>select modality</option>
                 </select>
                   </div>
-              <p><h1>Español C1(avanzado) Stationary</h1></p>
+              <p><h1>Español C1(avanzado) Online</h1></p>
+              <p>Learning a C1 level is about reaching the highest level a non-native speaker can achieve. You can understand a wide range of demanding, longer clauses, and recognize implicit meaning; express ideas fluently and spontaneously without much obvious searching for expressions; use language flexibly and effectively for social, academic and professional purposes. You can also produce clear, well-structured, detailed text on complex subjects, showing controlled use of organizational patterns, connectors and cohesive devices.
+                <button onclick="toggleContent78()" style="background-color:blue;color:white;">Read More</button>
+                <div id="content78" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+                  <p>
+                  The methodology of the course is based on fun activities carefully chosen by the teacher around the class topic covering all the areas of the language acquisition, namely: listening, speaking, reading and writing. Every class starts with a short conversation, a quick check of the previous homework, and a short presentation of the class topic/unit through an explanation by me complemented by drawings using a tablet, and sometimes audiovisual examples too. Soon after, the students are assigned group or individual activities to perform during class. Then we briefly check the results and clarify student’s questions, and repeat the activity-check methodology till the end of the class, when homework is assigned. The homework consists of 2 components: a quizlet vocabulary that is check by riddles in the following class and an open homework that could be either exercises from the book or a composition following a reading or an audiovisual material.
+                  <p>
+                  Apart from the class textbook -which will be sent to the student some days before the class-, we use Google Classroom, Google Docs, Quizlet and, of course, this website (with exercises and tests) as the main platforms of work, but also other ones such as Flippity and LearningApps. The class is taught via zoom and the recurring link is sent some days before the first lesson.
+                  </p>
+                  Length of the course: 45 academic hrs / 1.5 hrs each time / Twice a week
+                  <br>
+                  Price: 80zl/1hr. (up to 4 people), 60zl/1hr (up to 8 people). Individual lessons: 120zl/1hr.
+                  <br>Place: Starowiślna 17/8, 31-038 Kraków.
+                  Schedule: 3 options (the first one to reach 2 people will be the definite one):
+                  <ul>
+                    <li>Option 1) Fridays and Sundays 10:00-11:30</li>
+                    <li>Option 2) Saturdays and Sundays 10:00-11:30</li>
+                    <li>Option 3) Mondays and Wednesdays 10:45-12:15</li>
+                    <li>Option 4) Wednesdays 10:45-12:15 and Fridays 10:00-11:30</li>
+                    <li>Option 5) Wednesdays 12:15-13:45 and Fridays 11:30-13:00</li>
+                  </ul>
+                  </p>
+<div class="responsive">
+          <table>
+            <tr>
+              <th>Class days</th>
+              <th>Start and End date</th>
+              <th>Course price</th>
+              <th>Reservation</th>
+            </tr>
+            <tr>
+              <td>Three options 👆 (Select on the form that will be displayed after clicking "ORDER"👉)</td>
+              <td>02.01.2022 - 14.04.2023</td>
+              <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
+                <td><button id="order" onclick="toggleContent77()">ORDER</button></td>
+            </tr>
+        </table>
+
+<div class="responsive">
+        <div id="form-spaC1s" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSevBR-3PpYNasM5GZ2I-Ibnzelu23go_Knu03C6grNBDis_Wg/viewform?embedded=true" width="640" height="1034" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
+
+        </div>
+        </div>
+</div>
+              </div>
               </div>
             </article>
           </div>
