--- a/courses/spanish-a1.html
+++ b/courses/spanish-a1.html
@@ -10,10 +10,42 @@
       <body>
           <img class="img-banner" src="images/banner2b.jpg" alt="books banner">
             <div class="wrapper">
+
                 <h2 class="headline" data-left="2.05%">
                 <a href="index.html">Rodare</a>
                 </h2>
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
+
+                <div class="translate">
+                <!-- GTranslate: https://gtranslate.io/ -->
+                <a href="#" onclick="doGTranslate('en|es');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a><a href="#" onclick="doGTranslate('es|fr');return false;" title="French" class="gflag nturl" style="background-position:-200px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="French" /></a><a href="#" onclick="doGTranslate('es|de');return false;" title="German" class="gflag nturl" style="background-position:-300px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="German" /></a><a href="#" onclick="doGTranslate('es|it');return false;" title="Italian" class="gflag nturl" style="background-position:-600px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Italian" /></a><a href="#" onclick="doGTranslate('es|ja');return false;" title="Japanese" class="gflag nturl" style="background-position:-700px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Japanese" /></a><a href="#" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a><a href="#" onclick="doGTranslate('es|pt');return false;" title="Portuguese" class="gflag nturl" style="background-position:-300px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Portuguese" /></a><a href="#" onclick="doGTranslate('es|ru');return false;" title="Russian" class="gflag nturl" style="background-position:-500px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Russian" /></a><a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+
+                <style type="text/css">
+
+                a.gflag {vertical-align:middle;font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url(//gtranslate.net/flags/16.png);}
+                a.gflag img {border:0;}
+                a.gflag:hover {background-image:url(//gtranslate.net/flags/16a.png);}
+                #goog-gt-tt {display:none !important;}
+                .goog-te-banner-frame {display:none !important;}
+                .goog-te-menu-value:hover {text-decoration:none !important;}
+                body {top:0 !important;}
+                #google_translate_element2 {display:none!important;}
+
+                </style>
+
+                <div id="google_translate_element2"></div>
+                <script type="text/javascript">
+                function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'es',autoDisplay: false}, 'google_translate_element2');}
+                </script><script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+
+
+                <script type="text/javascript">
+                /* <![CDATA[ */
+                eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
+                /* ]]> */
+                </script>
+  </div>
+
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Home</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
@@ -35,7 +67,7 @@
 
 
 
-        <article class="img-info">
+
 
           <div class="menu">
               <ul>
@@ -61,28 +93,25 @@
           El vocabulario es básico, y se limita a sustantivos concretos y cercanos al día día (animales domésticos, partes de la casa, comida, partes del cuerpo)
       </p>
           <h2>Mini Tests </h2>
+
           <button onclick="toggleContent2()">Mini Test 1</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Ładuję…</iframe>
           </div>
-          <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-
 
           <button onclick="toggleContent7()">Mini Test 2</button>
           <div id="content7" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfffJNgNchQHoXbSF07L9bT4c10m2u-N9rKBgBeWRRXO-y-A/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfffJNgNchQHoXbSF07L9bT4c10m2u-N9rKBgBeWRRXO-y-A/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
           </div>
 
           <button onclick="toggleContent8()">Mini Test 3</button>
           <div id="content8" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
           </div>
-
-      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
       <button onclick="toggleContent9()">Test Final</button>
   <div id="content9" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
           <h2>Práctica </h2>
   <button onclick="toggleContent10()">Países 1</button>
@@ -188,9 +217,10 @@
 
                           <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-
+  </div>
         </article>
         <script type="text/javascript" src="js/main.js"></script>
 
+  </div>
     </body>
 </html>
