--- a/courses/spanish-b1.html
+++ b/courses/spanish-b1.html
@@ -96,39 +96,39 @@
       <h2>Subjuntivo</h2>
           <button onclick="toggleContent2()">Ejercicios 1: Presente (Subjuntivo)</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
       <p><button onclick="toggleContent3()">Ejercicios 2: Pretérito Imperfecto (Subjuntivo)</button>
       <div id="content3" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
       <p><button onclick="toggleContent4()">Ejercicios 3: Pluscuamperfecto (Subjuntivo)</button>
           <div id="content4" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
 
       </div>
 
      <p><button onclick="toggleContent5()">Ejercicios 4: ¿Subjuntivo o Indicativo? (1)</button>
       <div id="content5" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjoBSZ8Agf4YDu121N5GMDoBNw9t8WV4XUH3aShgl8v8FDXw/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjoBSZ8Agf4YDu121N5GMDoBNw9t8WV4XUH3aShgl8v8FDXw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
       <p><button onclick="toggleContent6()">Ejercicios 5: ¿Subjuntivo o Indicativo? (2)</button>
       <div id="content6" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqYrakNq_ag5UaitM5qoPUC3fpyxts2HWZzR0kVJLpQJu0tg/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqYrakNq_ag5UaitM5qoPUC3fpyxts2HWZzR0kVJLpQJu0tg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
       <h2>Tests</h2>
       <p><button onclick="toggleContent55()">Mini-Test B1.1</button>
               <div id="content55" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
 
       <p><button onclick="toggleContent34()">Test Final B1.2</button>
               <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
 
 
       </div>
